Fixed height and align to iFramePlayer

--- a/src/components/atoms/iFramePlayer/iFramePlayer.module.scss
+++ b/src/components/atoms/iFramePlayer/iFramePlayer.module.scss
@@ -40,9 +40,11 @@
   position: absolute;
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 640px;
   padding-top: 36.25%;
   border-radius: 40px;
+  align-self: center;
+  pointer-events: none;
 }
 
 .iFramePlayer__iframePlaying {
@@ -54,7 +56,4 @@
   width: 100%;
   height: 100%;
   border-radius: 40px;
-}
-
-@media screen and (max-width: 1295px) {
 }
