--- a/src/components/molecules/highlightCard/highlightCard.module.scss
+++ b/src/components/molecules/highlightCard/highlightCard.module.scss
@@ -6,4 +6,5 @@
   height: 100%;
   margin-bottom: 162px;
   border-radius: 40px;
+  background-color: transparent;
 }
